--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -64,6 +64,7 @@
   background-color: transparent;
   border: none;
   border-radius: 0.4rem;
+  padding: 0.25rem;
   outline: none;
   cursor: pointer;
   display: flex;
@@ -77,10 +78,13 @@
 
 .visualjson .error {
   color: #d0d0d0;
-  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
   height: 100%;
   width: 100%;
 }
@@ -141,7 +145,19 @@
   flex-direction: row;
   gap: 0rem;
   user-select: none;
+  white-space: nowrap;
 }
+
+.property > h3 {
+  display: inline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.property > h3:hover {
+  overflow: visible;
+}
+
 .visualjson .key {
   color: var(--clr-visualjson-key);
   margin: 0rem;
@@ -186,17 +202,15 @@
   color: var(--clr-visualjson-array);
 }
 
+.visualjson .emptyArray {
+  font-style: italic;
+  color: var(--clr-visualjson-array);
+}
+
 .visualjson .value {
   margin: 0rem;
   font-weight: normal;
   font-family: "Courier New", monospace;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.visualjson .value:hover {
-  overflow: visible;
-  white-space: unset;
 }
 
 .visualjson .arraySyntax {
